--- a/OnlineBookStore/src/main/resources/templates/index.html
+++ b/OnlineBookStore/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
     <tr th:each="book : ${bookList}">
         <td th:text="${book.id}">(id)</td>
         <td><a href="#" th:href="@{book/{bookId}(bookId=${book.id})}" th:text="${book.title}">(title)</a></td>
-        <td th:text="${book.author}">(author)</a></td>   <!-- TODO 作者ページへのリンク -->
+        <td th:text="${book.author}">(author)</td>   <!-- TODO 作者ページへのリンク -->
         <td th:text="${book.price} + '円'">(price)</td>
         <td th:text="'残り' + ${book.stock} + '冊'">(stock)</td>
     </tr>
