--- a/OnlineBookStore/src/main/resources/templates/management/top.html
+++ b/OnlineBookStore/src/main/resources/templates/management/top.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>管理画面</title>
 </head>
 <body>
 <h1>管理画面</h1>
-
+<a href="#" th:href="@{bookRegistrationForm}">書籍登録画面へ</a>
 </body>
 </html>
