著者ページを実装

--- a/OnlineBookStore/src/main/resources/templates/book/author.html
+++ b/OnlineBookStore/src/main/resources/templates/book/author.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>書籍詳細</title>
+    <title>著者詳細</title>
 </head>
 <body>
-<h1>書籍詳細</h1>
+<h1 th:text="${author} + 'の書籍一覧'">(author)</h1>
 <table>
     <thead>
     <tr>
@@ -17,15 +17,15 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="book : ${bookDetail}">
+    <tr th:each="book : ${bookListByAuthor}">
         <td th:text="${book.id}">(id)</td>
-        <td th:text="${book.title}">(title)</td>
+        <td><a href="#" th:href="@{{bookId}(bookId=${book.id})}" th:text="${book.title}">(title)</a></td>
         <td th:text="${book.author}">(author)</td>
         <td th:text="${book.price} + '円'">(price)</td>
         <td th:text="'残り' + ${book.stock} + '冊'">(stock)</td>
     </tr>
     </tbody>
 </table>
-<a href="#" th:href="@{index}">書籍一覧に戻る</a>
+<a href="#" th:href="@{/book/index}">書籍一覧に戻る</a>
 </body>
 </html>
