--- a/OnlineBookStore/src/main/resources/templates/management/top.html
+++ b/OnlineBookStore/src/main/resources/templates/management/top.html
@@ -22,8 +22,8 @@
     <tbody>
     <tr th:each="book : ${bookList}">
         <td th:text="${book.id}">(id)</td>
-        <td><a href="#" th:href="@{{bookId}(bookId=${book.id})}" th:text="${book.title}">(title)</a></td>
-        <td><a href="#" th:href="@{author/{author}(author=${book.author})}" th:text="${book.author}">(author)</a></td>
+        <td th:text="${book.title}">(title)</td>
+        <td th:text="${book.author}">(author)</td>
         <td th:text="${book.price} + '円'">(price)</td>
         <td th:text="'残り' + ${book.stock} + '冊'">(stock)</td>
         <td><a href="#" th:href="@{{bookId}(bookId=${book.id})}" th:text="この書籍の管理画面へ">(management)</a></td>
