--- a/OnlineBookStore/src/main/resources/templates/book/index.html
+++ b/OnlineBookStore/src/main/resources/templates/book/index.html
@@ -26,5 +26,14 @@
     </tr>
     </tbody>
 </table>
+<h1>タイトル検索</h1>
+<form action="#" th:action="@{/book/index/search}" th:method="get">
+    <input type="text" name="title"/>
+    <div>
+        <button type="submit">検索</button>
+    </div>
+</form>
+
+</form>
 </body>
 </html>
