--- a/OnlineBookStore/src/main/resources/templates/book/index.html
+++ b/OnlineBookStore/src/main/resources/templates/book/index.html
@@ -5,6 +5,7 @@
     <title>書籍一覧</title>
 </head>
 <body>
+<a href="#" th:href="@{/cart}">カートに移動</a>
 <h1>書籍一覧</h1>
 <table>
     <thead>
@@ -14,6 +15,7 @@
         <th>著者</th>
         <th>値段</th>
         <th>在庫</th>
+        <th>カートに追加</th>
     </tr>
     </thead>
     <tbody>
@@ -23,6 +25,11 @@
         <td><a href="#" th:href="@{author/{author}(author=${book.author})}" th:text="${book.author}">(author)</a></td>
         <td th:text="${book.price} + '円'">(price)</td>
         <td th:text="'残り' + ${book.stock} + '冊'">(stock)</td>
+        <td>
+            <form th:action="@{/addToCart/{bookId}(bookId=${book.id})}" method="post">
+                <button type="submit">追加</button>
+            </form>
+        </td>
     </tr>
     </tbody>
 </table>
