--- a/OnlineBookStore/src/main/resources/templates/book/cart.html
+++ b/OnlineBookStore/src/main/resources/templates/book/cart.html
@@ -14,6 +14,7 @@
         <th>著者</th>
         <th>値段</th>
         <th>在庫</th>
+        <th>カートから削除</th>
     </tr>
     </thead>
     <tbody>
@@ -23,6 +24,12 @@
         <td th:text="${cart.author}">(author)</td>
         <td th:text="${cart.price} + '円'">(price)</td>
         <td th:text="'残り' + ${cart.stock} + '冊'">(stock)</td>
+        <td>
+            <form th:action="@{/cart/delete}" method="post">
+                <input type="hidden" name="bookId" th:value="${cart.id}">
+                <button type="submit">削除</button>
+            </form>
+        </td>
     </tr>
     </tbody>
 </table>
