細かい追加修正 - リンク追加 - 文言修正

--- a/OnlineBookStore/src/main/resources/templates/management/book.html
+++ b/OnlineBookStore/src/main/resources/templates/management/book.html
@@ -68,6 +68,6 @@
         <button type="submit">削除</button>
     </form>
 </div>
-<a href="#" th:href="@{top}">書籍一覧に戻る</a>
+<a href="#" th:href="@{top}">管理画面トップに戻る</a>
 </body>
 </html>
