--- a/OnlineBookStore/src/main/resources/templates/management/bookRegistrationForm.html
+++ b/OnlineBookStore/src/main/resources/templates/management/bookRegistrationForm.html
@@ -31,6 +31,6 @@
         <button type="submit">登録</button>
     </div>
 </form>
-<a href="#" th:href="@{top}">書籍一覧に戻る</a>
+<a href="#" th:href="@{top}">管理画面トップに戻る</a>
 </body>
 </html>
