--- a/OnlineBookStore/src/main/resources/templates/user/userList.html
+++ b/OnlineBookStore/src/main/resources/templates/user/userList.html
@@ -5,7 +5,9 @@
     <title>ユーザー一覧</title>
 </head>
 <body>
-<a href="#" th:href="@{userRegistrationForm}">ユーザー登録画面へ</a>
+<a href="#" th:href="@{userRegistrationForm}">ユーザー登録画面へ</a><br>
+<a href="#" th:href="@{/management/top}">管理画面トップに戻る</a>
+
 
 <h1>ユーザー一覧</h1>
 <div>
