ログインページに登録画面へのリンク追加 登録画面に制限を無しに

--- a/OnlineBookStore/src/main/resources/templates/user/login.html
+++ b/OnlineBookStore/src/main/resources/templates/user/login.html
@@ -22,5 +22,6 @@
         <button type="submit">ログイン</button>
     </div>
 </form>
+<a href="#" th:href="@{userRegistrationForm}">ユーザー登録画面へ</a>
 </body>
 </html>
