ユーザー一覧ページとコントローラのリファクタリング

--- a/OnlineBookStore/src/main/resources/templates/management/top.html
+++ b/OnlineBookStore/src/main/resources/templates/management/top.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>管理画面</h1>
-<a href="#" th:href="@{/user/userList}">ユーザー一覧へ</a><br>
+<a href="#" th:href="@{/management/userList}">ユーザー一覧へ</a><br>
 <a href="#" th:href="@{bookRegistrationForm}">書籍登録画面へ</a>
 <h1>書籍一覧</h1>
 <table>
