管理者アカウント登録画面の実装

--- a/OnlineBookStore/src/main/resources/templates/management/userList.html
+++ b/OnlineBookStore/src/main/resources/templates/management/userList.html
@@ -5,7 +5,7 @@
     <title>ユーザー一覧</title>
 </head>
 <body>
-<a href="#" th:href="@{/}">ユーザー登録画面へ</a><br> <!-- TODO　管理者用ユーザ管理画面へのリンクにする -->
+<a href="#" th:href="@{/management/adminRegistrationForm}">ユーザー登録画面へ</a><br>
 <a href="#" th:href="@{/management/top}">管理画面トップに戻る</a>
 
 
