カート機能の一部を実装＆MyBatisの設定を実装 - ログイン情報からusernameを取得する処理を実装。 - カートに追加、カート情報取得、カートから削除それぞれ対応。 - DBのスネークケースのカラムをJAVAのキャメルケースの変数に自動で対応できるように、MyBatisの設定を実装。

--- a/OnlineBookStore/src/main/resources/templates/cart/cart.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/cart.html
@@ -26,7 +26,7 @@
         <td th:text="'残り' + ${cart.stock} + '冊'">(stock)</td>
         <td>
             <form th:action="@{/cart/delete}" method="post">
-                <input type="hidden" name="bookId" th:value="${cart.id}">
+                <input type="hidden" name="cartId" th:value="${cart.cartId}">
                 <button type="submit">削除</button>
             </form>
         </td>
