小さな修正 ログアウトページのリンク追加

--- a/OnlineBookStore/src/main/resources/templates/cart/cart.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/cart.html
@@ -33,6 +33,8 @@
     </tr>
     </tbody>
 </table>
-<a href="#" th:href="@{/book/index}">書籍一覧に戻る</a>
+<a href="#" th:href="@{/book/index}">書籍一覧に戻る</a><br>
+<a href="#" th:href="@{/user/logout}">ログアウト画面へ</a>
+
 </body>
 </html>
