--- a/OnlineBookStore/src/main/resources/templates/cart/cart.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/cart.html
@@ -33,6 +33,7 @@
     </tr>
     </tbody>
 </table>
+<p th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</p>
 <a href="#" th:href="@{/book/index}">書籍一覧に戻る</a><br>
 <a href="#" th:href="@{/user/logout}">ログアウト画面へ</a>
 
