--- a/OnlineBookStore/src/main/resources/templates/cart/payment.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/payment.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>カート</title>
+    <title>決済</title>
 </head>
 <body>
-<h1>カート内容一覧</h1>
+<h1>決済内容確認</h1>
 <table>
     <thead>
     <tr>
@@ -13,8 +13,6 @@
         <th>タイトル</th>
         <th>著者</th>
         <th>値段</th>
-        <th>在庫</th>
-        <th>カートから削除</th>
     </tr>
     </thead>
     <tbody>
@@ -23,21 +21,16 @@
         <td th:text="${cart.title}">(title)</td>
         <td th:text="${cart.author}">(author)</td>
         <td th:text="${cart.price} + '円'">(price)</td>
-        <td th:text="'残り' + ${cart.stock} + '冊'">(stock)</td>
-        <td>
-            <form th:action="@{/cart/delete}" method="post">
-                <input type="hidden" name="cartId" th:value="${cart.cartId}">
-                <button type="submit">削除</button>
-            </form>
-        </td>
     </tr>
     </tbody>
 </table>
 
 <p th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</p>
-<a href="#" th:href="@{/cart/payment}">決済に進む</a><br>
-<a href="#" th:href="@{/book/index}">書籍一覧に戻る</a><br>
-<a href="#" th:href="@{/user/logout}">ログアウト画面へ</a>
+<form th:action="@{/cart/payment}" method="post">
+    <button type="submit">決済</button>
+</form>
+
+<a href="#" th:href="@{/book/index}">カートに戻る</a>
 
 </body>
 </html>
