決済機能を実装　WIP  - 決済確認画面と決済完了画面を実装  - カートからDeleteする処理を実装

--- a/OnlineBookStore/src/main/resources/templates/cart/cart.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/cart.html
@@ -35,7 +35,7 @@
 </table>
 
 <p th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</p>
-<a href="#" th:href="@{/cart/payment}">決済に進む</a><br>
+<a href="#" th:href="@{/cart/payment/confirm}">決済に進む</a><br>
 <a href="#" th:href="@{/book/index}">書籍一覧に戻る</a><br>
 <a href="#" th:href="@{/user/logout}">ログアウト画面へ</a>
 
