決済機能を実装　WIP  - 注文履歴画面を実装

--- a/OnlineBookStore/src/main/resources/templates/book/index.html
+++ b/OnlineBookStore/src/main/resources/templates/book/index.html
@@ -5,7 +5,9 @@
     <title>書籍一覧</title>
 </head>
 <body>
-<a href="#" th:href="@{/cart}">カートに移動</a>
+<a href="#" th:href="@{/cart}">カートに移動</a><br>
+<a href="#" th:href="@{/user/history}">注文履歴に移動</a>
+
 <h1>書籍一覧</h1>
 <table>
     <thead>
