細かい挙動修正

--- a/OnlineBookStore/src/main/resources/templates/book/author.html
+++ b/OnlineBookStore/src/main/resources/templates/book/author.html
@@ -19,7 +19,7 @@
     <tbody>
     <tr th:each="book : ${bookListByAuthor}">
         <td th:text="${book.id}">(id)</td>
-        <td><a href="#" th:href="@{{bookId}(bookId=${book.id})}" th:text="${book.title}">(title)</a></td>
+        <td><a href="#" th:href="@{/book/{bookId}(bookId=${book.id})}" th:text="${book.title}">(title)</a></td>
         <td th:text="${book.author}">(author)</td>
         <td th:text="${book.price} + '円'">(price)</td>
         <td th:text="'残り' + ${book.stock} + '冊'">(stock)</td>
