--- a/OnlineBookStore/src/main/resources/templates/cart/payment/confirm.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/payment/confirm.html
@@ -30,7 +30,7 @@
     <button type="submit">決済</button>
 </form>
 
-<a href="#" th:href="@{/cart/cart}">カートに戻る</a>
+<a href="#" th:href="@{/cart}">カートに戻る</a>
 
 </body>
 </html>
