注文履歴画面に購入日時を追加  - OrderDTO追加、OrderにBookに内容を追加

--- a/OnlineBookStore/src/main/resources/templates/user/history.html
+++ b/OnlineBookStore/src/main/resources/templates/user/history.html
@@ -13,6 +13,7 @@
         <th>タイトル</th>
         <th>著者</th>
         <th>値段</th>
+        <th>購入日時</th>
     </tr>
     </thead>
     <tbody>
@@ -21,6 +22,7 @@
         <td th:text="${history.title}">(title)</td>
         <td th:text="${history.author}">(author)</td>
         <td th:text="${history.price} + '円'">(price)</td>
+        <td th:text="${history.date}">(date)</td>
     </tr>
     </tbody>
 </table>
