Formクラスにアノテーション付与 AdminRegistrationFormを、管理者登録画面に文言変更

--- a/OnlineBookStore/src/main/resources/templates/management/adminRegistrationForm.html
+++ b/OnlineBookStore/src/main/resources/templates/management/adminRegistrationForm.html
@@ -5,7 +5,7 @@
     <title>ユーザー登録フォーム</title>
 </head>
 <body>
-<h1>ユーザー登録</h1>
+<h1>管理者登録</h1>
 <form action="#" th:action="@{/management/adminRegistrationForm}" th:method="post" th:object="${adminRegistrationForm}">
     <div>
         <label for="usernameInput">ユーザー名</label>
