--- a/OnlineBookStore/src/main/resources/templates/management/userList.html
+++ b/OnlineBookStore/src/main/resources/templates/management/userList.html
@@ -5,7 +5,7 @@
     <title>ユーザー一覧</title>
 </head>
 <body>
-<a href="#" th:href="@{/management/adminRegistrationForm}">ユーザー登録画面へ</a><br>
+<a href="#" th:href="@{/management/adminRegistrationForm}">管理者登録画面へ</a><br>
 <a href="#" th:href="@{/management/top}">管理画面トップに戻る</a>
 
 
