--- a/OnlineBookStore/src/main/resources/templates/top.html
+++ b/OnlineBookStore/src/main/resources/templates/top.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>トップページ</h1>
+<!-- TODO　トップページ必要か？ -->
 <a href="#" th:href="@{book/index}">書籍一覧へ</a><br>
 <a href="#" th:href="@{management/top}">管理画面へ</a><br>
 </body>
