--- a/OnlineBookStore/src/main/resources/templates/top.html
+++ b/OnlineBookStore/src/main/resources/templates/top.html
@@ -7,6 +7,7 @@
 <body>
 <h1>トップページ</h1>
 <!-- TODO　トップページ必要か？ -->
+<!-- TODO　ヘッダー(とフッター)を共通の部品で作成するべき -->
 <a href="#" th:href="@{book/index}">書籍一覧へ</a><br>
 <a href="#" th:href="@{management/top}">管理画面へ</a><br>
 </body>
