--- a/OnlineBookStore/src/main/resources/templates/top.html
+++ b/OnlineBookStore/src/main/resources/templates/top.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>トップページ</title>
-    <link rel="stylesheet" th:href="@{/css/sample.css}">
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-<div class="container">
+<div>
     <h1>トップページ</h1>
     <!-- TODO　トップページ必要か？ -->
     <!-- TODO　ヘッダー(とフッター)を共通の部品で作成するべき -->
     <a href="#" th:href="@{book/index}">書籍一覧へ</a><br>
     <a href="#" th:href="@{management/top}">管理画面へ</a><br>
-    <h1>こんにちは、世界！</h1>
-    <p>これはサンプルのコンテンツです。</p>
-    <a href="#" class="button">クリックする</a>
 </div>
 </body>
 </html>
