フロントの実装  - 全てのhtmlファイルにCSSを適用  - カート画面と決済確認画面の合計金額を修正

--- a/OnlineBookStore/src/main/resources/templates/book/author.html
+++ b/OnlineBookStore/src/main/resources/templates/book/author.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>著者詳細</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1 th:text="${author} + 'の書籍一覧'">(author)</h1>
