--- a/OnlineBookStore/src/main/resources/templates/book/index.html
+++ b/OnlineBookStore/src/main/resources/templates/book/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>書籍一覧</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <a href="#" th:href="@{/cart}">カートに移動</a><br>
