--- a/OnlineBookStore/src/main/resources/templates/cart/payment/complete.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/payment/complete.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>決済完了</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>お買い上げありがとうございました</h1>
