--- a/OnlineBookStore/src/main/resources/templates/management/bookRegistrationForm.html
+++ b/OnlineBookStore/src/main/resources/templates/management/bookRegistrationForm.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>書籍登録フォーム</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>書籍登録</h1>
