--- a/OnlineBookStore/src/main/resources/templates/management/userList.html
+++ b/OnlineBookStore/src/main/resources/templates/management/userList.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ユーザー一覧</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <a href="#" th:href="@{/management/adminRegistrationForm}">管理者登録画面へ</a><br>
