--- a/OnlineBookStore/src/main/resources/templates/user/history.html
+++ b/OnlineBookStore/src/main/resources/templates/user/history.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>注文履歴</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>注文履歴</h1>
