--- a/OnlineBookStore/src/main/resources/templates/user/login.html
+++ b/OnlineBookStore/src/main/resources/templates/user/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ログインページ</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>ログインページ</h1>
