--- a/OnlineBookStore/src/main/resources/templates/user/logout.html
+++ b/OnlineBookStore/src/main/resources/templates/user/logout.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ログアウトページ</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>ログアウトページ</h1>
