--- a/OnlineBookStore/src/main/resources/templates/book/search.html
+++ b/OnlineBookStore/src/main/resources/templates/book/search.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>書籍一覧</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>書籍一覧</h1>
