--- a/OnlineBookStore/src/main/resources/templates/cart/cart.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/cart.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>カート</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>カート内容一覧</h1>
@@ -34,7 +35,7 @@
     </tbody>
 </table>
 
-<p th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</p>
+<h1 th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</h1>
 <a href="#" th:href="@{/cart/payment/confirm}">決済に進む</a><br>
 <a href="#" th:href="@{/book/index}">書籍一覧に戻る</a><br>
 <a href="#" th:href="@{/user/logout}">ログアウト画面へ</a>
