--- a/OnlineBookStore/src/main/resources/templates/cart/payment/confirm.html
+++ b/OnlineBookStore/src/main/resources/templates/cart/payment/confirm.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>決済確認</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>決済内容確認</h1>
@@ -25,7 +26,7 @@
     </tbody>
 </table>
 
-<p th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</p>
+<h1 th:text="'合計金額は' + ${totalPrice} + '円です'">(totalPrice)</h1>
 <form th:action="@{/cart/payment/confirm}" method="post">
     <button type="submit">決済</button>
 </form>
