--- a/OnlineBookStore/src/main/resources/templates/management/top.html
+++ b/OnlineBookStore/src/main/resources/templates/management/top.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>管理画面</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 <h1>管理画面</h1>
